# AuthService

./: .coverage  .env  ARCHITECTURE.md  README.md  app.py  docker-compose.yml  haproxy.cfg  nginx.conf  prometheus.yml  pyproject.toml  todo.md
.github/workflows/: ci.yml
blueprints/auth/: __init__.py  service.py  views.py
blueprints/dashboard/: service.py  views.py
blueprints/dashboard/static/: dashboard_user.css
blueprints/dashboard/templates/: dashboard_user.html  test_dashboard.html
blueprints/users/: __init__.py  credentials_repository.py  crendentials_service.py  mfa_repository.py  mfa_service.py  models.py  repository.py  service.py  user_repository.py  user_service.py  views.py
blueprints/users/static/: user_changepw.css  user_register.css  user_register.js
blueprints/users/templates/: users_changepw.html  users_login.html  users_otp_input.html  users_qrcode.html  users_register.html
core/: __init__.py  database.py  di.py  init_db.py  init_redis.py  models.py  utils.py
pgbouncer/: pgbouncer.ini
static/: user_login.css  user_otp_input.css  user_qrcode.css
tests/auth/: test_auth_service.py
tests/core/: test_di.py
tests/dashboard/: test_dashboard_service.py
tests/users/: test_credentials_service.py  test_crendentials_repo.py  test_mfa_repo.py  test_mfa_service.py  test_user_model.py  test_user_models.py  test_user_repo.py  test_user_service.py
