[project]
name = "bookstore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bcrypt>=4.3.0",
    "compress>=0.1.1",
    "flask>=3.1.0",
    "flask-compress>=1.17",
    "flask-migrate>=4.1.0",
    "flask-session>=0.8.0",
    "psycopg2>=2.9.10",
    "pyotp>=2.9.0",
    "python-dotenv>=1.0.1",
    "qrcode>=8.0",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.38",
]
